--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /.emacs.d/projectile-bookmarks.eld
 /.emacs.d/.dap-breakpoints
 /.emacs.d/.last-package-update-day
+/.emacs.d/request/
+/.emacs.d/var/
