better symlinking with Dropbox. Add Syncthing doc

--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -1,4 +1,8 @@
+linuxSetupDocs
+.gitignore
 \.git
 misc
 LICENSE
-^/.*\.org #anythin that ends with .org
+^/.*\.org   # anything that ends with .org
+^/.*\.html  # anything that ends with .html
+
