--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
+.gitconfig
+.git-credentials
 /.emacs.d/session*
-/.emacs.d/recentf
+/.emacs.d/recentf*
+/.emacs.d/places*
+/.emacs.d/filebackups/
+/.emacs.d/bookmarks
 /.emacs.d/elpa/
 /.emacs.d/.cache/
 /.emacs.d/elpy/
@@ -16,5 +21,4 @@
 /.emacs.d/url/
 /.emacs.d/eln-cache/
 /.emacs.d/ac-comphist.dat
-/.ipython/profile_default/history.sqlite
-
+.ipython/profile_default/history.sqlite # does not work. Why?
