Org to HTML on save, fix long-lines function, add many keybindings

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,5 @@
 /.emacs.d/url/
 /.emacs.d/eln-cache/
 /.emacs.d/ac-comphist.dat
-.ipython/profile_default/history.sqlite # does not work. Why?
+.ipython/profile_default/history.sqlite
+/.emacs.d/projects
