--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.gitconfig
 .git-credentials
 /.emacs.d/session*
 /.emacs.d/recentf*
@@ -23,3 +22,4 @@
 /.emacs.d/ac-comphist.dat
 .ipython/profile_default/history.sqlite
 /.emacs.d/projects
+/.ipython/profile_default/db/
