--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,6 @@
 .git-credentials
-/.emacs.d/session*
-/.emacs.d/recentf*
-/.emacs.d/places*
-/.emacs.d/filebackups/
-/.emacs.d/bookmarks
-/.emacs.d/elpa/
-/.emacs.d/.cache/
-/.emacs.d/elpy/
-/.emacs.d/transient/
-/.emacs.d/auto-save-list/
-/.emacs.d/.lsp-session-v1
-/.emacs.d/eshell/
-/.emacs.d/#init.el#
-/.emacs.d/projectile-bookmarks.eld
-/.emacs.d/.dap-breakpoints
-/.emacs.d/.last-package-update-day
-/.emacs.d/request/
-/.emacs.d/var/
-/.emacs.d/url/
-/.emacs.d/eln-cache/
-/.emacs.d/ac-comphist.dat
+/.emacs.d/*
+/.emacs.d/init.el
 .ipython/profile_default/history.sqlite
-/.emacs.d/projects
 /.ipython/profile_default/db/
 /.ipython/profile_default/startup/
