--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /.ipython/profile_default/db/
 /.ipython/profile_default/history.sqlite
 /.ipython/profile_default/startup/
+/linuxSetupDocs/ltximg/
